--- a/.github/workflows/dotnet-package.yml
+++ b/.github/workflows/dotnet-package.yml
@@ -127,4 +127,4 @@ jobs:
       - name: Git tag
         run: |
           git tag $VERSION
-          git push --tags
+          git push origin $VERSION
