--- a/.github/workflows/dotnet-package.yml
+++ b/.github/workflows/dotnet-package.yml
@@ -69,8 +69,8 @@ jobs:
         id: version-builder
         if: inputs.publishable
         uses: sketch7/version-builder-action@main
-        with:
-          preid-branches: "master,refs/heads/feature/reusable-workflow" # todo: remove and use default
+        # with:
+          # preid-branches: "master,refs/heads/workflow"
           # preid: "rc"
 
       - name: Set version envs
