--- a/.github/workflows/node-lib.yml
+++ b/.github/workflows/node-lib.yml
@@ -18,6 +18,11 @@ on:
         type: boolean # todo: remove feature/ci
         default: ${{ contains(fromJSON('["develop", "master", "workflow", "feature/ci"]'), github.ref_name) || endsWith(github.ref_name, '.x')  }}
         required: false
+      publish-command:
+        description: "Command to run to publish packages (defaults to: `npm run publish` NOTE: NOT `npm publish`)"
+        type: string
+        default: npm run publish
+        required: false
     secrets:
       npm-auth-token:
         description: Auth token for NPM
@@ -75,14 +80,20 @@ jobs:
       - name: Lint
         run: npm run lint --if-present
 
+        # todo: replace with version replacer action
+      - name: Prerelease build
+        if: inputs.publishable
+        run: npm run pre-release-build --if-present
+
       - name: Build
         run: npm run build
 
       - name: Test
-        run: npm test
+        run: npm test --if-present
 
       - name: Publish
-        run: npm publish
+        run: ${{ inputs.publish-command }}
+        # run: npm run publish
         if: inputs.publishable
 
       - name: Git tag
