--- a/workflows/node-lib.yml
+++ b/workflows/node-lib.yml
@@ -15,8 +15,13 @@ on:
         default: 'https://registry.npmjs.org'
       publishable:
         description: Determines whether packages should be published to Nuget
-        type: boolean # todo: remove feature/ci
-        default: ${{ contains(fromJSON('["develop", "master", "workflow", "feature/ci"]'), github.ref_name) || endsWith(github.ref_name, '.x')  }}
+        type: boolean
+        default: ${{ contains(fromJSON('["develop", "master", "workflow"]'), github.ref_name) || endsWith(github.ref_name, '.x')  }}
+        required: false
+      force-preid:
+        description: "Forces preid versioning even if branch not satisfied."
+        type: boolean
+        default: false
         required: false
       preid-branches:
         description: "Branches to be used for preid, as comma delimited to use for versioning e.g. 'master,develop'."
@@ -65,9 +70,10 @@ jobs:
       - name: Build version
         id: version-builder
         if: inputs.publishable
-        uses: sketch7/version-builder-action@main
+        uses: sketch7/version-builder-action@v1
         with:
           preid-branches: ${{ inputs.preid-branches }}
+          force-preid: ${{ inputs.force-preid }}
           # preid-branches: "master,workflow"
           # preid: "rc"
 
@@ -85,7 +91,15 @@ jobs:
       - name: Lint
         run: npm run lint --if-present
 
-        # todo: replace with version replacer action
+      - name: Replace version placeholder
+        if: inputs.publishable
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          find: "0.0.0-PLACEHOLDER"
+          replace: ${{ env.VERSION }}
+          include: "src/version.ts"
+          regex: false
+
       - name: Prerelease build
         if: inputs.publishable
         run: npm run pre-release-build --if-present
