--- a/.github/workflows/dotnet-package.yml
+++ b/.github/workflows/dotnet-package.yml
@@ -36,7 +36,7 @@ env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
   DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
-  NUGET_AUTH_TOKEN: ${{ secrets.nuget-auth-token }}
+  NUGET_AUTH_TOKEN: ${{ secrets.nuget-auth-token || secrets.GITHUB_TOKEN }}
 
 jobs:
   build:
@@ -73,7 +73,7 @@ jobs:
       - name: Build version
         id: version-builder
         if: inputs.publishable
-        uses: sketch7/version-builder-action@main
+        uses: sketch7/version-builder-action@v1
         with:
           preid-branches: ${{ inputs.preid-branches }}
           # preid-branches: "master,workflow"
