--- a/.github/workflows/node-lib.yml
+++ b/.github/workflows/node-lib.yml
@@ -7,12 +7,17 @@ on:
         description: Node version to use (defaults to 18)
         required: false
         type: string
-        default: '18'
+        default: "18"
+      package-manager:
+        description: "Specify which package manager to use for repo e.g. 'npm', 'pnpm' (defaults: 'npm')"
+        required: false
+        type: string
+        default: npm
       registry-url:
         description: NPM registry to use
         required: false
         type: string
-        default: 'https://registry.npmjs.org'
+        default: "https://registry.npmjs.org"
       publishable:
         description: Determines whether packages should be published to Nuget
         type: boolean
@@ -49,15 +54,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Validate input
+        run: |
+          if [[ "${{ inputs.package-manager }}" != "npm" && "${{ inputs.package-manager }}" != "pnpm" ]]; then
+            echo "Invalid package manager: '${{ inputs.package-manager}}'. Please use 'npm' or 'pnpm'."
+            exit 1
+          fi
+
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        if: inputs.package-manager == 'pnpm'
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: ${{ inputs.node-version }}
           registry-url: ${{ inputs.registry-url }}
-          cache: 'npm'
+          cache: ${{ inputs.package-manager }}
 
       - name: Print environment versions
         run: |
@@ -86,7 +102,15 @@ jobs:
         run: npm version $VERSION --allow-same-version=true --git-tag-version=false
 
       - name: Restore dependencies
-        run: npm ci
+        run: |
+          if [[ ${{ inputs.package-manager }} == "npm" ]]; then
+            npm ci
+          elif [[ ${{ inputs.package-manager }} == "pnpm" ]]; then
+            pnpm i
+          else
+            echo "::error ::Package manager '${{ inputs.package-manager }}' not handled!"
+            exit 1
+          fi
 
       - name: Lint
         run: npm run lint --if-present
@@ -134,7 +158,7 @@ jobs:
     outputs:
       version: ${{ steps.version-builder.outputs.version }}
 
-  # todo: do it as a separate job? - tricky 
+  # todo: do it as a separate job? - tricky
   # publish:
   #   needs: build
   #   runs-on: ubuntu-latest
