--- a/.github/workflows/node-lib.yml
+++ b/.github/workflows/node-lib.yml
@@ -112,6 +112,13 @@ jobs:
             exit 1
           fi
 
+      # todo: cache nx
+      # - name: Cache nx
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: .nx/cache
+      #     key: ${{ runner.os }}-nx
+
       - name: Lint
         run: npm run lint --if-present
 
